--- a/Cosmo/Cosmo/Cosmo.fsproj
+++ b/Cosmo/Cosmo/Cosmo.fsproj
@@ -54,6 +54,8 @@
     <Compile Include="String.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <Compile Include="Regex.fs" />
+    <Compile Include="TextFile.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
