--- a/Cosmo/Cosmo/Cosmo.fsproj
+++ b/Cosmo/Cosmo/Cosmo.fsproj
@@ -56,6 +56,8 @@
     <Content Include="packages.config" />
     <Compile Include="Regex.fs" />
     <Compile Include="TextFile.fs" />
+    <Compile Include="TextReader.fs" />
+    <Compile Include="TextWriter.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
